added star sector map